kubernetes/istio/virtualservice-order.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-vs
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - microservices-gateway
  http:
  - match:
    - uri:
        prefix: "/order"
    route:
    - destination:
        host: order-service
        port:
          number: 5001
