kubernetes/istio/virtualservice-payment.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-vs
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - microservices-gateway
  http:
  - match:
    - uri:
        prefix: "/payment"
    route:
    - destination:
        host: payment-service
        port:
          number: 5002
