kubernetes/istio/virtualservice-user.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-vs
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - microservices-gateway
  http:
  - match:
    - uri:
        prefix: "/user"
    route:
    - destination:
        host: user-service
        port:
          number: 5000
